--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -2,3 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/earlyaccess/cwtexyen.css");
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Inter:wght@500&family=Varela+Round&display=swap");
